--- a/client/src/app/components/nav/nav.component.html
+++ b/client/src/app/components/nav/nav.component.html
@@ -1,1 +1,24 @@
-<p>nav works!</p>
+<nav class="navbar">
+  <h1 class="nav-header">
+    $tonks <span class="subtitle">Mock Stock Trading</span>
+  </h1>
+  <ul class="nav-list">
+    <li class="nav-item">
+      <a href="/"> <fa-icon [icon]="faTableColumns"></fa-icon> Dashboard</a>
+    </li>
+    <li class="nav-item">
+      <a href="/"><fa-icon [icon]="faFolderOpen"></fa-icon> Portfolio</a>
+    </li>
+    <li class="nav-item">
+      <a href="/"><fa-icon [icon]="faMagnifyingGlass"></fa-icon> Browse</a>
+    </li>
+    <li class="nav-item">
+      <a href="/"><fa-icon [icon]="faGear"></fa-icon> Settings</a>
+    </li>
+    <li class="nav-item">
+      <a href="/"
+        ><fa-icon [icon]="faArrowRightFromBracket"></fa-icon> Sign out</a
+      >
+    </li>
+  </ul>
+</nav>
