--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,1 +1,45 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Nunito Sans;
+}
+
+main {
+  display: flex;
+}
+
+.dashboard {
+  width: 100vw;
+}
+
+ol,
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+html {
+  background-color: var(--blue);
+  color: white;
+}
+
+:root {
+  --black: #0d1321;
+  --blue: #1d2d44;
+  --green: #58bc82;
+  --red: #eb5e55;
+  --grey: #b5afa6;
+}
